[package]
name = "rbr-plugin-runner"
version = "0.1.0"
authors = ["Robert <r@robertmasen.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer-runtime = "0.8"

[workspace]
members = [
    "crates/rbr-plugin",
]