[package]
name = "rbr-plugin-runner"
version = "0.1.0"
authors = ["Robert <r@robertmasen.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer-runtime = { version = "0.8", optional = true }
rbr-macro = { path = "crates/rbr-macro", optional = true }
serde = {version = "1", features = ["derive"]}
bincode = "1"

[workspace]
members = [
    "crates/rbr-plugin",
    "crates/rbr-macro"
]

[features]
default = ["rbr-macro"]
bin = ["wasmer-runtime"]